--- a/client/client/src/components/User/userStyle.css
+++ b/client/client/src/components/User/userStyle.css
@@ -1,10 +1,13 @@
 .formdiv{
-   width:'10px';
-   height:'350px';
-   margin-left:'555px';
-   margin-top:'70px';
-   background:black
+    width:35vw;
+    height:80vh;
+    margin-top: 40px;
+    margin-left:auto;
+    margin-right:auto;
+    box-shadow: rgba(0, 0, 0, 0.35) 0px 3px 7px;
+    padding-top:20px;
 }
+
 
 .inputField1{
     background-color: #C4C4C4;
@@ -39,14 +42,45 @@
 
 /* travel Agency css */
 .filterTA{
-    margin-top: 20px;
-    margin-left: 10px;
-    width: 350px;
-    height:407px;
-    background-color: azure;
+    margin-top: 40px;
+    box-shadow: rgba(0, 0, 0, 0.35) 1px 5px 15px;
+    margin-left: 50px;
+    width: 300px;
+    height:40vh;
+
+   
 }
 
+.sdiv{
+    background-color: #9CC6EE;
+    color: #9CC6EE;
+    width: 30px;
+    height: 50vh;
+}
 
+.cimg{
+    width: 118px;
+    height: 122px;
+    margin-top: 18px;
+    margin-left: 35px;
+}
+.cardContent{
+    background-color: #9CC6EE;
+    width: 25vw;
+    height: 50vh;
+    margin-left: 41px;
+}
+.cardHeading{
+    text-align: center;
+    font-weight: 600;
+    font-size: 23px;
+    margin-left: 60px;
+}
+.cardContent2{
+    text-align: center;
+    margin-top: 10px;
+    margin-left: 55px;
+}
 /* media queries */
 @media (max-width:990px){
     .inputField1{
@@ -61,6 +95,39 @@
         height: 50px;
         
     } 
+    .formdiv{
+        width:50vw;
+        height:80vh;
+        margin-top: 40px;
+        margin-left:310px;
+        /* margin-right:auto; */
+        box-shadow: rgba(0, 0, 0, 0.35) 0px 3px 7px;
+        padding-top:20px;
+    }
+    .filterTA{
+        margin-top: 40px;
+        box-shadow: rgba(0, 0, 0, 0.35) 1px 5px 15px;
+        margin-left: 200px;
+        width: 300px;
+        height:40vh;
+    
+       
+    }
+
+    .cardContent{
+        background-color: #9CC6EE;
+        width: 30vw;
+        height: 50vh;
+        margin-left: 41px;
+    }
+    
+}
+/* Driver Cards */
+.dCardsheader{
+    background: url("https://images.fastcompany.net/image/upload/w_596,c_limit,q_auto:best,f_auto/wp-cms/uploads/2021/03/LinkedIn-Default-Background-pre-2020-813x265.jpeg");
+    height:15vh;
+    width:30wh;
+    background-size: 300px 500px;
 }
 @media (max-width:600px){
     .inputField1{
@@ -76,6 +143,30 @@
        
         
     } 
+    .formdiv{
+        width:70vw;
+        height:60vh;
+        margin-top: 40px;
+        margin-left:100px;
+        /* margin-right:auto; */
+        box-shadow: rgba(0, 0, 0, 0.35) 0px 3px 7px;
+        padding-top:20px;
+    }
+    .filterTA{
+        margin-top: 40px;
+        box-shadow: rgba(0, 0, 0, 0.35) 1px 5px 15px;
+        margin-left: 60px;
+        width: 300px;
+        height:40vh;
+    
+       
+    }
+    .cardContent{
+        background-color: #9CC6EE;
+        width: 50vw;
+        height: 50vh;
+        margin-left: 41px;
+    }
 }
 @media (max-width:400px){
     .inputField1{
