--- a/client/client/src/components/User/userStyle.css
+++ b/client/client/src/components/User/userStyle.css
@@ -1,10 +1,16 @@
 .formdiv{
-    width:35vw;
+    width:50vw;
     height:80vh;
     margin-top: 40px;
     margin-left:auto;
     margin-right:auto;
-    box-shadow: rgba(0, 0, 0, 0.35) 0px 3px 7px;
+    background: rgba( 80, 227, 194, 0.45 );
+    box-shadow: 0 8px 32px 0 rgba( 31, 38, 135, 0.37 );
+    backdrop-filter: blur( 4px );
+    -webkit-backdrop-filter: blur( 4px );
+    border-radius: 10px;
+    border: 1px solid rgba( 255, 255, 255, 0.18 );
+    /* box-shadow: rgba(0, 0, 0, 0.35) 0px 3px 7px; */
     padding-top:20px;
 }
 
@@ -81,6 +87,15 @@
     margin-top: 10px;
     margin-left: 55px;
 }
+/* travel Agency detail */
+
+.TAdetailheader{
+    width:500px;
+    height:500px;
+    margin-left: 100px;
+}
+
+
 /* media queries */
 @media (max-width:990px){
     .inputField1{
@@ -167,6 +182,13 @@
         height: 50vh;
         margin-left: 41px;
     }
+    .TAdetailheader{
+        width:250px;
+        height:250px;
+        
+        margin-left: 80px;
+    }
+
 }
 @media (max-width:400px){
     .inputField1{
@@ -182,4 +204,5 @@
        
         
     } 
+ 
 }
