--- a/client/client/src/components/User/userStyle.css
+++ b/client/client/src/components/User/userStyle.css
@@ -95,7 +95,12 @@
     margin-left: 100px;
 }
 
+.profbtn{
+background: 'red';
+margin-left: 340px;
+margin-top: 10px;
 
+}
 /* media queries */
 @media (max-width:990px){
     .inputField1{
@@ -135,6 +140,7 @@
         height: 50vh;
         margin-left: 41px;
     }
+ 
     
 }
 /* Driver Cards */
